--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,7 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    text-align: justify;
+    text-align: left;
     color: white;
     font-family: inherit;
     font-size: 1rem;
